FIX profile__avatar-container flex-wrap

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -37,6 +37,7 @@
 
 .profile__avatar-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: var(--de-gap-xl);
   margin-bottom: var(--de-margin-s);
